<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/loginJunglezonDisplay"
        android:layout_width="373dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="30sp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/loginUsernameHint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginJunglezonDisplay" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/loginPasswordHint"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginUsernameEditText" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:id="@+id/loginLoginButton"
        android:text="@string/loginLogin"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/loginNewUserDisplay"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/loginNewUser"
        app:layout_constraintTop_toBottomOf="@id/loginLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:id="@+id/loginCreateAccountButton"
        android:text="@string/loginCreateAccount"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@id/loginNewUserDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>