<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainJunglezonDisplay"
        android:layout_width="373dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="30sp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainUserDisplay"
        android:layout_width="373dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainJunglezonDisplay" />

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:id="@+id/mainSearchItems"
        android:text="@string/mainSearchItems"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@id/mainUserDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:id="@+id/mainAccountDetails"
        android:text="@string/maindAccountDetails"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@id/mainSearchItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:id="@+id/mainCancelOrder"
        android:text="@string/mainCancelOrder"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@+id/mainAccountDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:id="@+id/mainIsAdmin"
        android:text="@string/mainIsAdmin"
        android:textSize="16sp"
        android:background="@drawable/buttoncustomize"
        app:layout_constraintTop_toBottomOf="@+id/mainCancelOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/mainLogOut"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/buttoncustomize"
        android:text="@string/mainLogOut"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainIsAdmin" />


</androidx.constraintlayout.widget.ConstraintLayout>